# ASS-JSON

./: __main__.py  pyproject.toml
test/json/: test1.json  test2.json
