[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ASS-JSON"
version = "0.0.1"
authors = [
  { name="Emil"},
]
description = "This package is to help javascript coders to convert to python easily"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/HTXEN/ASS-JSON"
Issues = "https://github.com/HTXEN/ASS-JSON/issues"